fixed dark/light icons align isue

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -113,6 +113,7 @@ header .switchContainer label .ball i {
   display: flex;
   align-items: center;
   justify-content: center;
+  line-height: initial;
 }
 
 header .switchContainer input {
